# macrohelp

./: .gitignore  CMakeLists.txt  PACKAGE-MANIFEST.md  README.md  build.bat  build_mingw.bat  quick-start.md
macrohelp-runtime/source/: CMakeLists.txt  README.md  build.bat  build_mingw.bat
macrohelp-runtime/source/res/: CursorOverlay.manifest  CursorOverlay.rc  promptfont.h
macrohelp-runtime/source/src/: main.cpp  resource.h
res/: CursorOverlay.rc  promptfont.h
src/: main.cpp  resource.h
tasket-http-daemon/: BUILD-FRESH-WINDOWS.md  CMakeLists.txt  README.md  build.ps1  build_windows.bat
tasket-http-daemon/include/: HttpServer.h  TaskExecutor.h  TaskJsonLoader.h  TaskRegistry.h  Types.h
tasket-http-daemon/scripts/: build-fresh-qt6.ps1  verify-runtime-layout.ps1
tasket-http-daemon/source/: CMakeLists.txt  build_windows.bat
tasket-http-daemon/source/include/: HttpServer.h  TaskExecutor.h  TaskRunner.h  httplib.h  mainwindow.h
tasket-http-daemon/source/patches/: Task.h.patch
tasket-http-daemon/source/src/: TaskExecutor.cpp  TaskJsonLoader.cpp  TaskRegistry.cpp
tasket-http-daemon/src/: HttpServer.cpp  TaskExecutor.cpp  TaskRunner.cpp  main.cpp  mainwindow.cpp
